implemented forEquipmentWithFilter API for Status service
