# status-service/src/main/java/com/telecominfraproject/wlan/status/controller/StatusController.java
@@ -255,5 +255,23 @@ public class StatusController {
             LOG.error("Failed to publish events : {}", events, e);
         }
     }
-    
+
+
+    @RequestMapping(value = "/forEquipmentWithFilters", method = RequestMethod.GET)
+    public ListOfStatuses getForEquipment(@RequestParam int customerId, 
+    		@RequestParam Set<Long> equipmentIds, 
+    		@RequestParam Set<StatusDataType> statusDataTypes) {
+        LOG.debug("getForEquipment({},{},{})", customerId, equipmentIds, statusDataTypes);
+        try {
+            List<Status> result = statusDatastore.getForEquipment(customerId, equipmentIds, statusDataTypes);
+            LOG.debug("getForEquipment({},{},{}) return {} entries", customerId, equipmentIds, statusDataTypes, result.size());
+            ListOfStatuses ret = new ListOfStatuses();
+            ret.addAll(result);
+            return ret;
+        } catch (Exception exp) {
+             LOG.error("getForEquipment({},{},{}) exception ", customerId, equipmentIds, statusDataTypes, exp);
+             throw exp;
+        }
+	}
+        
 }
